@@ -5,25 +5,26 @@ Description: Allows form managers to download entries from their respondents
     using Wufoo JSON API (<https://www.wufoo.com>). Additionally, the Wufoo reports - when public - can be
     also acquired programmatically. Note that building new forms within this package
     is not supported.
-Version: 0.8
-Date: 2018-03-15
+Version: 0.9
+Date: 2019-03-17
 Authors@R: c(
     person("John", "Malc", email = "cincenko@outlook.com", role = c("aut", "cre"), comment = "@dmpe"),
     person("Maksim", "Pecherskiy", role = c("ctb"), comment = "@MrMaksimize")
     )
 Maintainer: John Malc <cincenko@outlook.com>
 Depends:
-    R (>= 3.4.0)
+    R (>= 3.5.0)
 Imports:
-    httr (>= 1.3.0),
-    jsonlite (>= 1.5),
-    dplyr (>= 0.7.4)
+    httr (>= 1.4.0),
+    jsonlite (>= 1.6),
+    dplyr (>= 0.8)
 Suggests:
-    roxygen2 (>= 6.0.1),
-    knitr (>= 1.20),
-    testthat (>= 2.0.0)
+    roxygen2 (>= 6.1.1),
+    knitr (>= 1.22),
+    testthat (>= 2.0.1)
 VignetteBuilder: knitr
+Encoding: UTF-8
 License: Apache License 2.0
 URL: https://github.com/dmpe/wufoor
 BugReports: https://github.com/dmpe/wufoor/issues
-RoxygenNote: 6.0.1
+RoxygenNote: 6.1.1
