@@ -1,12 +1,13 @@
 [![Build Status](https://travis-ci.org/dmpe/WufooR.svg?branch=master)](https://travis-ci.org/dmpe/WufooR)
 [![Coverage Status](https://coveralls.io/repos/dmpe/WufooR/badge.svg?branch=master&service=github)](https://coveralls.io/github/dmpe/WufooR?branch=master)
 [![CRAN_Status_Badge](http://www.r-pkg.org/badges/version/WufooR)](https://cran.r-project.org/package=WufooR)
+=======
 
 R package for Wufoo API
 =======
 
-This package doesn't support creating new forms. 
-It can be only used to retrieve information about your form entries. 
+**Note:** This package doesn't support creating new forms. 
+Thus, it can be only used to retrieve information about your existing forms (entries) and reports. This is due to lacking API support for that. 
 
 ### Installing
 
@@ -21,7 +22,7 @@ library(devtools)
 devtools::install_github("dmpe/wufoor")
 ```
 
-Tested on Ubuntu 18.04 and Windows 10 (64 bit using latest R)
+Tested on Ubuntu 19.04 and Windows 10 (64 bit using latest R)
 
 ### Looking for examples and current implementation status ?
 
