@@ -13,11 +13,11 @@ auth_key(x)
 \item{x}{- an empty parameter, e.g. NULL}
 }
 \description{
-Method for setting your Wufoo Name and API Key. Your Wufoo name is the subdomain 
+A method for setting your Wufoo Name and API Key. Your Wufoo name is the subdomain 
 of your Wufoo URL displayed in "Account" tab. For example, for http://johnmalc.wufoo.com ->
-the Wufoo_Name = "johnmalc". This can be also actually the company's name, e.g. \code{http://google.wufoo.com}
+the Wufoo_Name = "johnmalc". This can be actually the company's name too, e.g. \code{http://google.wufoo.com}
 
-Your API may be found by selecting "Share" for your Form, then 
+Your API key may be found by selecting "Share" for your Form, then 
 "API Information" (or go to \code{https://yourName.wufoo.com/api/code/1/}.
 }
 \note{
