@@ -27,7 +27,7 @@ etc. or "First Name", "Last Name" (tries to make best guess). Default to the sec
 
 \item{debugConnection}{- samilar as above. Either "0L" (false; default) or "1L"}
 
-\item{domain}{- for thatever reason domain's ccTLD may change. With this param you can change 
+\item{domain}{- for whatever reason domain's ccTLD may change. With this parameter you can change 
 default \code{wufoo.com} to another one such as \code{wufoo.eu}}
 
 \item{pageStart}{- the page number you'd like to start from.  Defaults to 0.}
