@@ -4,4 +4,4 @@ library(httr)
 library(jsonlite)
 library(dplyr)
 
-# test_check("WufooR")
+test_check("WufooR")
