@@ -13,13 +13,11 @@ editor_options:
 
 ## Authentication
 
-To access data from your surways, you firstly need to store your login name (subdomain) and API Key. This can be done in two ways as described below. 
-
-Initially, this has been written by [Scott Chamberlain](https://github.com/sckott), who wrote it in the NEWS file of his `rnoaa` [package](https://github.com/ropensci/rnoaa/blob/master/NEWS.md). I have addapted the names of my functions accordingly.
+To access data from your surveys, you need to store your login information (name of subdomain and API key) in your local R environment. As described below, this can be done in two ways (ideas borrowed from [Scott Chamberlain](https://github.com/sckott) who used them in his `rnoaa` [package](https://github.com/ropensci/rnoaa/) package)
 
 PS: Don't use my key, of course. See <https://wufoo.github.io/docs/>
 
-> A new helper function `auth_name()/auth_api()` looks for one of two stored keys, as an
+> A helper function `auth_name()/auth_api()` looks for one of two stored keys, as an
 environment variable under the name `Wufoo_Name`/`Wufoo_API`, or an option variable under the name
 `Wufoo_Name`/`Wufoo_API`. 
 
@@ -33,14 +31,14 @@ library(WufooR)
 options(Wufoo_Name = "johnmalc", Wufoo_API = "put here your api key")
 ```
 
-Print information about my name & api key.
+Print information about myself & API key.
 
 ```{r, eval=FALSE, include=T}
 auth_name(NULL)
 auth_key(NULL)
 ```
 
-## Use Cases 
+## User Information
  
 Let's print some information about the user.
 
@@ -60,12 +58,13 @@ t(fe_1)
 sapply(fe_1, class)
 ```
 
+And how many responses did we get sofar ?
+
 ```{r, eval=FALSE, include=T}
-# How many responses did you get ?
 form_entriesCount(formIdentifier = "z5kqx7h1gtvg4g", domain = "wufoo.eu")
 ```
 
-Show its fields, with the requested URL (for debug purposes).
+Show form's fields, with the requested URL (for debug purposes).
 
 ```{r, eval=FALSE, include=T}
 fields_info(formIdentifier = "z5kqx7h1gtvg4g", showRequestURL = TRUE)
