@@ -1,6 +1,10 @@
 For the current development, see: https://github.com/dmpe/WufooR
 
 ###
+March 2019     - ensure that package works properly again
+               - bump version number and update dependancies
+               - fix spelling mistakes
+
 March 2018     - update to reflect CRAN messages
                - updated tutorial page and deleted api key which caused problems
                - upgraded some packages
